Made the padding around elements more responsive, and fixed a bug with columns having extra space at the top

--- a/main_page_style.css
+++ b/main_page_style.css
@@ -1,17 +1,18 @@
 @import url("sitewide_style.css");
 
 div.section {
-    margin-top: 20px;
-    padding: 20px;
-    padding-bottom: 20px;
-    break-inside: avoid;
-    display: block;
+    overflow: hidden; /* fix for Firefox */
+    break-inside: avoid-column;
+    -webkit-column-break-inside: avoid;
+}
+
+div.section_wrapper {
+    padding-top: 20px;
 }
 
 div.tiled_view_wrapper {
     column-width: 500px;
     column-gap: 20px;
-    margin-top: 20px;
 }
 
 div.tiled_view_wrapper > div.section:first-child {
@@ -19,12 +20,10 @@ div.tiled_view_wrapper > div.section:first-child {
 }
 
 img.profile_image {
-    width: 20%;
-    margin-top: 3px;
-    margin-right: 2%;
-    margin-bottom: 1%;
-    margin-left: 0px;
+    width: 35%;
     float: left;
+    margin-left: 0px;
+    margin-top: 0px;
 }
 
 img.qualifications_logo {
@@ -37,7 +36,7 @@ div.hover_image_wrapper {
     position: relative;
     width: 155px;
     overflow: hidden;
-    margin: 10px;
+    padding: 1%;
     vertical-align: top;
 }
 
@@ -67,7 +66,7 @@ p {
 
 .section_header, .subtitle {
     margin: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
 }
 
 .subtitle {
@@ -90,7 +89,6 @@ p {
 @media all and (max-width: 800px) , all and (max-device-width: 800px) {
     div.hover_image_wrapper {
         width: 44%;
-        margin: 2%;
     }
     
     p.hover_text {
