--- a/qualifications_style.css
+++ b/qualifications_style.css
@@ -2,23 +2,21 @@
 
 div.section {
     margin-top: 20px;
-    padding: 20px;
-    padding-bottom: 10px;
     break-inside: avoid;
     overflow: hidden;
 }
 
 img.work_logo, img.project_logo, img.award_logo {
     float: left;
-    margin: 0px;
-    padding-right: 20px;
-    padding-left: 0px;
-    padding-bottom: 10px;
     width: 200px;
+    margin-top: 0px;
+    margin-left: 0px;
 }
 
 img.project_logo {
     width: 150px;
+    margin-top: 0px;
+    margin-left: 0px;
 }
 
 .section_title {
