--- a/sitewide_style.css
+++ b/sitewide_style.css
@@ -129,16 +129,17 @@ div.main {
 }
 
 div.section {
-    padding-left: 8%;
-    padding-right: 8%;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 2%;
     border-radius: 2px;
     border-style: solid;
     border-width: 5px;
     font-size: 125%;
     background-color: rgb(245, 245, 245);
     border-color: rgb(200, 200, 200);
+}
+
+img {
+    margin: 2%;
 }
 
 body {
